--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="meeting-new">
+<div class="meeting-back">
   <div id="meeting-top-title">
     <i class="far fa-calendar-alt"></i>
     面談日時登録
@@ -50,7 +50,7 @@
 
         <tbody>
           <tr>
-            <td>
+            <td style="background: #4496d3; color: #ffffff;">
               <div id="content-left">
                 <% dates.sort.each do |date| %>
                   <%= date %><br>
