--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -92,6 +92,7 @@
   
 </style>
 <script>
+　$('#date_picker').datepicker();
   let count = 1;
   function documrntView(){
     $("#document_edit_itemarea").slideToggle();
@@ -104,4 +105,5 @@
     }
     count++ ;
   }
+ 
 </script>
