--- a/app/assets/stylesheets/document_selects.scss
+++ b/app/assets/stylesheets/document_selects.scss
@@ -89,6 +89,12 @@
     margin-left: 1%;
     
 }
+.document_user_select_radio{
+    display: block;
+    margin-top: -4%;
+    margin-left: 18%;
+    
+}
 #document_download_title{
     font-size: 16px;
     margin-bottom: 2%;
@@ -205,6 +211,28 @@
     #select_flash{
         width: 100%;
     }
-
+  .document_select_radio{
+        width: 2.3em;
+        height: 2.3em;
+        margin-left: 20%;
+        
+    }  
+  #document_select_label{
+    display: block;
+    width: 100%;
+    margin-top:2%;
+    margin-left: 1%;
+  }
+  .document_user_select_radio{
+    display: block;
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    margin-top: -14%;
+    margin-left: 30%;
+  }
+  .document_user_select td{
+      padding:20px;
+  }
 
 }
