面談スケジュール調整ページのレスポンシブ対応

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -39,6 +39,17 @@
   padding-bottom: 20px;
 }
 
+.meeting-back2 {
+  padding: 0.2em 0.5em;
+  margin: 2em 0;
+  color: #565656;
+  background: #ead7a4;
+  box-shadow: 0px 0px 0px 10px #ead7a4;
+  border: dashed 2px #ffffff;
+  border-radius: 8px;
+  padding-bottom: 20px;
+}
+
 .meeting-time {
   position: relative;
   background: #c6e4ff;
@@ -106,6 +117,28 @@
   border-left: solid 6px #5bb7ae;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.33);
 }
+
+.meeting-index {
+  position: relative;
+  background: #dbebc4;
+  box-shadow: 0px 0px 0px 5px #dbebc4;
+  border: dashed 2px white;
+  padding: 0.2em 0.5em;
+  color: #454545;
+}
+
+.meeting-index:after{
+    position: absolute;
+    content: '';
+    right: -7px;
+    top: -7px;
+    border-width: 0 15px 15px 0;
+    border-style: solid;
+    border-color: #dbebc4 #fff #dbebc4;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
+}
+
+
 
 /* 面談日時登録ページ */
 
@@ -258,6 +291,12 @@ td.ui-datepicker-week-end a.ui-state-highlight{
   font-family: 'M PLUS Rounded 1c';
 }
 
+.submit-single {
+  width: 30%;
+  font-size: 18px;
+  font-family: 'M PLUS Rounded 1c';
+}
+
 .submit-edit {
   width: 30%;
   font-size: 18px;
@@ -306,11 +345,15 @@ td.ui-datepicker-week-end a.ui-state-highlight{
   .submit-width {
     font-size: 14px;
   }
+  .submit-single {
+    width: 70%;
+    font-size: 14px;
+  }
   .select-font {
     font-size: 13px;
   }
   .submit-edit {
-    width: 50%;
+    width: 70%;
     font-size: 14px;
   }
   #submit-center {
@@ -323,7 +366,7 @@ td.ui-datepicker-week-end a.ui-state-highlight{
   }
   #scroll-ajust {
     text-align: left;
-    padding-left: 12%;
+    padding-left: 10%;
   }
   #ui-datepicker-div {   //ポップアップ後のdatepicker
     width: 80%;
