--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -32,7 +32,7 @@
         </tbody>
       </table>
       <div id="submit-center">
-        <%= f.submit '追加', class: "btn btn-success submit-width" %>
+        <%= f.submit '追加', class: "btn btn-success submit-single" %>
       </div>
     <% end %>
   </div>
