--- a/app/views/meetings/index2.html.erb
+++ b/app/views/meetings/index2.html.erb
@@ -1,5 +1,5 @@
-<div class="meeting-back">
-  <div id="meeting-top-title" class="text-primary">
+<div class="meeting-back2">
+  <div id="meeting-top-title">
     <i class="fas fa-inbox"></i>
     面談返信状況確認
   </div>
@@ -32,7 +32,7 @@
       </tbody>
     </table>
     <div id="submit-center">
-      <%= link_to teacher_meetings_index_path(@teacher), class: "btn btn-primary btn-lg" do %>
+      <%= link_to teacher_meetings_index_path(@teacher), class: "btn btn-primary submit-single" do %>
         <i class="far fa-calendar-check"></i>
         スケジュール調整へ
       <% end %>
