--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -31,7 +31,7 @@
           </tbody>
         </table>
         <div id="datepicker-submit">
-          <%= f.submit '登録', class: "btn btn-success submit-width" %>
+          <%= f.submit '登録', class: "btn btn-success submit-single" %>
         </div>
       <% end %>
     </div>
