トップボタン変更

--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -110,7 +110,7 @@
 #menu li {
   padding: 8px;
   color: black;
-  border-bottom: 1px solid black;
+  // border-bottom: 1px solid black;
 }
 
 #menu li#menu-title {
