--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -11,49 +11,50 @@
 
 <div id="teacher-top">
   <div id="one">
-    <%= link_to  teacher_meetings_new_path(@teacher), class: "btn btn-success top-button" ,id:"teacher_bt" do %>
+    <%= link_to  teacher_meetings_new_path(@teacher), class: "" ,id:"teacher_bt" do %>
        <i class="far fa-calendar-alt"></i>
-       面談日登録
+       <div>面談日時登録</div>
     <% end %>
-    <%= link_to  teacher_meetings_edit_path(@teacher), class: "btn btn-info top-button",id:"teacher_bt" do %>
+    <%= link_to  teacher_meetings_edit_path(@teacher), class: "",id:"teacher_bt" do %>
        <i class="far fa-clock"></i>
-       面談日時編集
+       <div>面談時間登録</div>
+
     <% end %>
   </div>
   <div id="two">
-    <%= link_to teacher_meeting_index2_path(@teacher), class: "btn btn-default top-button",id:"teacher_bt",style:"background:#c0c0c0"  do %>
+    <%= link_to teacher_meeting_index2_path(@teacher), class: "",id:"teacher_bt" do %>
       <i class="fas fa-inbox"></i>
-      面談返信状況確認
+      <div>面談返信状況確認</div>
     <% end %>
-    <%= link_to documents_path(params:{teacher_id: @teacher}), class: "btn btn-danger top-button",id:"teacher_bt" do %>
-       <%= image_tag('/icon/dk.png',size:"20x20") %>
-       提出状況確認
+    <%= link_to documents_path(params:{teacher_id: @teacher}), class: "",id:"teacher_bt" do %>
+       <i class="fas fa-book-open"></i>
+       <div>提出状況確認</div>
     <% end %>
   </div>
   <div id="three">
-    <%= link_to new2_document_path(params:{teacher_id: @teacher}), class: "btn btn-warning top-button",id:"teacher_bt" do %>
-       <%= image_tag('/icon/input0.png',size:"20x20") %>
-       入力式提出
+    <%= link_to new2_document_path(params:{teacher_id: @teacher}), class: "",id:"teacher_bt" do %>
+      <i class="fas fa-file-signature"></i>
+      <div>入力式提出</div>
     <% end %>
-    <%= link_to new_document_path(params:{teacher_id: @teacher}), class: "btn btn-primary top-button",id:"teacher_bt" do %>
-      <%= image_tag('/explain/form.png',size:"20x20") %>
-      選択式提出
+    <%= link_to new_document_path(params:{teacher_id: @teacher}), class: "",id:"teacher_bt" do %>
+      <i class="far fa-list-alt"></i>
+      <div>選択式提出</div>
     <% end %>
   </div>
   <div id="four">
-    <%= link_to new3_document_path(params:{teacher_id: @teacher}), class: "btn btn-default top-button",id:"teacher_bt",style:"background:pink" do %>
-      <%= image_tag('/explain/pdf.png',size:"20x20") %>
-      表示書類
+    <%= link_to new3_document_path(params:{teacher_id: @teacher}), class: "",id:"teacher_bt" do %>
+      <i class="fas fa-paste"></i>
+      <div>表示書類</div>
     <% end %>
-    <%= link_to teacher_t_message_path(@teacher), class: "btn btn-success top-button",id:"teacher_bt" do %>
-      <%= image_tag('/icon/mail.png',size:"20x20") %>
-      個別連絡
+    <%= link_to teacher_t_message_path(@teacher), class: "",id:"teacher_bt" do %>
+      <i class="fas fa-comments"></i>
+      <div>個別連絡</div>
     <% end %>
   </div>
   <div id="five">
-    <%= link_to teacher_teacher_index2_path(@teacher), class: "btn btn-info top-button last" do %>
-    <i class="fas fa-users" style="color: #000000;"></i>
-    保護者一覧
+    <%= link_to teacher_teacher_index2_path(@teacher), class: "last" do %>
+    <i class="fas fa-users"></i>
+    <div>保護者一覧</div>
     <% end %>
   </div>
 </div>
